--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,12 +14,14 @@
       *{
         font-family: 'Source Sans Pro', sans-serif;
         margin: 0;
+        color: #012752;
       }
+        
     </style>
   <title>PRTFOLIOS</title>
 </head>
 
-<body>
+<body >
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 </body>
