--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -14,7 +14,7 @@
       *{
         font-family: 'Source Sans Pro', sans-serif;
         margin: 0;
-        color: #012752;
+        /* color: #ffffff; */
       }
         
     </style>
